--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-This file was created by JetBrains WebStorm 2.1.5 for binding GitHub repository
+My presentation at OnGameStart 2011. Warsaw, Poland.
+Use Enter and Ctrl+Enter to navigate among slides.
