--- a/README
+++ b/README
@@ -1,2 +1,6 @@
 My presentation at OnGameStart 2011. Warsaw, Poland.
 Use Enter and Ctrl+Enter to navigate among slides.
+
+'''
+All artwork (c) 2011 Ludei and Ideateca Software Factory.
+Thanks @zigor for his awesome pencil skills.
